<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/black"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backArrow"
            android:src="@drawable/back_white"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/lblTitle"
            android:text="@string/history"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/tripImg"
                    android:src="@drawable/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:scaleType="centerCrop"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/tripProviderImg"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:civ_border_color="#FFFFFF"
                        app:civ_border_width="4dp"
                        android:layout_gravity="center"
                        app:civ_shadow="true"
                        app:civ_shadow_radius="10"
                        app:civ_shadow_color="#FFFFFF"
                        android:layout_marginRight="8dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tripProviderName"
                            android:text="@string/sample_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/black_text_color"
                            />
                        <RatingBar
                            android:id="@+id/tripProviderRating"
                            style="?attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:progressTint="#FFCA28"
                            android:isIndicator="true"
                            android:numStars="5" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tripDate"
                            android:textSize="@dimen/_11sdp"
                            android:textColor="@color/black_text_color"
                            android:gravity="right"
                            android:lineSpacingMultiplier="1.5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#1a1a1a"/>
                <LinearLayout
                    android:id="@+id/sourceAndDestinationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:src="@drawable/round_shape"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/tripSource"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text=""
                            android:gravity="left"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:src="@drawable/round_shape"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/tripDestination"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/ViewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#1a1a1a"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/payment_methods"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black_text_color"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/paymentTypeImg"
                            android:src="@drawable/visa_icon"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:layout_gravity="center_vertical"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:id="@+id/paymentType"
                            android:textColor="@color/black_text_color"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="40dp"
                            android:gravity="center_vertical|left"
                            android:layout_marginLeft="10dp"/>
                        <TextView
                            android:id="@+id/tripAmount"
                            android:layout_weight="1"
                            android:textColor="@color/black_text_color"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center_vertical|right"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#1a1a1a"/>
                <LinearLayout
                    android:id="@+id/lnrComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black_text_color"/>

                    <TextView
                        android:id="@+id/tripComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/black_text_color"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnCancelRide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:background="@drawable/cancel_button_bg"
        android:text="@string/cancel_ride"
        android:textColor="@color/cancel_ride_color" />

</LinearLayout>

